--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nuxt-icon": "^0.5.0"
   },
   "dependencies": {
+    "@nuxtjs/google-adsense": "^2.1.0",
     "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.0/xlsx-0.20.0.tgz"
   }
 }
